[package]
name = "libstark_rs"
version = "0.1.0"
authors = ["osuke <arget-fee.free.dgm@hotmail.co.jp>"]
edition = "2018"
links = "libomp"
build = "build.rs"

[lib]
name = "stark_rs"

[dependencies]
structopt="0.2"

[build-dependencies]
bindgen = "0.42.2"
cc = { version = "1.0.28", features = ["parallel"] }
glob = "0.2"
